<?xml version="1.0"?>
<package>
  <name>vigir_ihmc_gazebo_launch</name>
  <version>0.0.0</version>
  <description>The vigir_ihmc_gazebo_launch package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>